# awww

./: .gitignore  Cargo.toml  readme.md
cli/: Cargo.toml
daemon/: Cargo.toml
daemon/src/: config.rs  main.rs  widget.rs
src/: main.rs  utils.rs  widget.rs
