[package]
name = "awww-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
gtk = "0.18.1"
gtk-layer-shell = "0.8.0"
webkit2gtk = { version = "=2.0", features = [ "v2_38" ] }
webkit2gtk-sys = "=2.0"
gio = "0.18.2"
gdk = "0.18.0"
javascriptcore-rs = "1.1.1"
serde_json = "1.0.107"
serde = { version = "1.0.190", features = ["derive"] }
ctrlc = "3.4.1"

